@@ -1,7 +1,7 @@
 \chapter{Inter-process communication (IPC)}
 \label{ipc}
 
-The Hurd requires a capability system.  Capabilities are used to proof
+The Hurd requires a capability system.  Capabilities are used to prove
 your identity to other servers (authentication), and access
 server-side implemented objects like devices, files, directories,
 terminals, and other things.  The server can use a capability for
